chore: add conventional commits

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "A simple Node.js application that serves 'Hello, World!'",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "prepare": "husky"
   },
-  "dependencies": {},
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "husky": "^9.1.7"
+  }
 }
