--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo \"No tests specified\" && exit 0",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pre-commit": "echo \"No tests specified\" && exit 0"
   },
   "author": "",
   "license": "ISC",
